<resources>
    <string name="app_name">Task!</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="signup">Registrarse</string>
    <string name="favorites">Favoritos</string>
    <string name="tasktitle">TaskTitle</string>
    <string name="taskstatus">TaskStatus</string>
    <string name="tasksize">TaskSize</string>
    <string name="settasktofav">setTaskToFav</string>
    <string name="taskname">Nombre de la tarea.</string>
    <string name="description">Descripción</string>
    <string name="add">Crear</string>
    <string name="favorite">Favorito:</string>
    <string name="edit">Editar</string>
    <string name="task">Tarea</string>
    <string name="closeSession">Cerrar Sesión</string>
    <string name="splashText">Tasks!</string>
    <string name="loading">Cargando…</string>
    <string name="signUp">Regístrate ahora.</string>
    <string name="errorTitle">Error!</string>
    <string name="errorSavingUser">Ocurrió un error inesperado al registarte como usuario, por favor vuelve a intentarlo más tarde.</string>
    <string name="passwordError">Las constraseñas no coinciden, por favor vuelve a ingresarlas.</string>
    <string name="emptySignUpFields">Todos los campos son obligatorios, por favor complétalos.</string>
    <string name="userOrPassInvalid">Usuario o contraseña incorrecto.</string>
    <string name="addTaskError">Ocurrió un error al guardar la Tarea, por favor vuelve a intentarlo</string>
    <string name="overview">Inicio</string>
    <string name="welcome">Bienvenido</string>
    <string name="taskNameError">La tarea debe tener un nombre!</string>
    <string name="favTaskTitle">Tus tareas destacadas!</string>
    <string name="noTasks">Parece que no tienes Tareas. ¿Deseas crear una?</string>
    <string name="noTasksFav">Parece que no tienes Tareas marcadas como Favoritas. ¿Deseas crear una?</string>
    <string name="detailTitle">Detalle</string>
    <string name="genericError">Ocurrió un error inesperado, vuelve a intentarlo más tarde</string>
</resources>